# AetherGrid

./: .env.example  .gitignore  README.md  docker-compose.yml  example.py  main.py  pyproject.toml  requirements.txt
Build-Docs/: AETHERGRID_BUILD_SPEC.md  AETHERGRID_TECHNICAL_IMPLEMENTATION.md  Designing-AetherBus-AetherGrid-Information-11-03-2025.md  Info-On-Architecture-&-Feasibility.md  OpenAI-removal-replacements.md  Starter-Doc-Grok-Blueprint-For-MVP.md
scripts/: health-check.sh  init-mongo.sh  init-postgres.sql  start.sh  stop.sh
src/adapters/: base_adapter.py  claude_adapter.py
src/api/: server.py
src/capture/: conversation_monitor.py
src/config/: embedding_settings.py
src/embeddings/: __init__.py  base_provider.py  cohere_provider.py  local_provider.py
src/processing/: embedding_worker.py
src/storage/: mongo_client.py  postgres_client.py  redis_client.py  weaviate_client.py
tests/: conftest.py  test_api.py  test_conversation_monitor.py
